# tokenx

./: CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs  patterns.rs  segment.rs
tests/: estimate.rs  options.rs  slice.rs  split.rs  within_limit.rs
tests/common/: mod.rs
tests/fixtures/: .gitattributes
